[package]
name = "file-index"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
tantivy = "0.14.0"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json"]